# lucky-liars

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
3d-assets/: clyde.blend  clyde.blend1  door.blend  table.blend  table.blend1
assets/3d/: clyde.glb  door.glb  glinda.glb  harry.glb  room.glb
assets/dialogue/: hello.yarn
src/: lib.rs  main.rs  recording.rs  req.rs  serial.rs  stt.rs  tts.rs
