[package]
name = "cornhacks24-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bevy = { version = "0.12.1", features = [
    "dynamic_linking",
    "file_watcher",
    "jpeg",
] }
bevy_egui = "0.24.0"
bevy-inspector-egui = "0.22.1"
bevy_yarnspinner = "0.1.2"
bevy_yarnspinner_example_dialogue_view = "0.1.0"
clap = { version = "4.5.1", features = ["derive"] }
cpal = "0.15.2"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
hound = "3.5.1"
rand = "0.8.5"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serialport = "4.3.0"
whisper-rs = "0.10.0"
bevy_reflect = "0.12.0"
